[project]
name = "dorm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cairocffi>=1.7.1",
    "leidenalg>=0.10.2",
    "numpy>=2.3.2",
    "openai>=1.99.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 20

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
